adding postman collection and setting connectionString for exernalDB

--- a/PreventorBackEndTest/appsettings.json
+++ b/PreventorBackEndTest/appsettings.json
@@ -1,5 +1,6 @@
 {
   "ConnectionStrings": {
-    "PreventorConnection": "Server=localhost;Database=Preventor;User Id=sa;Password=password123;TrustServerCertificate=True;Encrypt=True;"
+    //"PreventorConnection": "Server=localhost;Database=Preventor;User Id=sa;Password=password123;TrustServerCertificate=True;Encrypt=True;",
+    "PreventorConnection": "workstation id=PreventorDB.mssql.somee.com;packet size=4096;user id=renzo223_SQLLogin_1;pwd=49p1dm3pi7;data source=PreventorDB.mssql.somee.com;persist security info=False;initial catalog=PreventorDB;TrustServerCertificate=True"
   }
 }
